fixed nav links

--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
                     <img src="http://weblab.cs.uml.edu/~anevers/imgs/me_and_sam.jpg" alt="Sampson, a very sweet puppy, licks my face."/>
                 </div>
                 <ul class="nav">
-                    <li class="nav"><a class="nav" href="/~anevers/index.html">Index</a></li>
-                    <li class="nav"><a class="nav" href="/~anevers/part4/hw4.html">HW4</a></li>
-                    <li class="nav"><a class="nav" href="/~anevers/part5/hw5.html">HW5</a></li>
-                    <li class="nav"><a class="nav" href="/~anevers/part6/hw6.html">HW6</a></li>
-                    <li class="nav"><a class="nav" href="/~anevers/contact.html">Contact</a></li>
+                    <li class="nav"><a class="nav" href="index.html">Index</a></li>
+                    <li class="nav"><a class="nav" href="/part4/hw4.html">HW4</a></li>
+                    <li class="nav"><a class="nav" href="/part5/hw5.html">HW5</a></li>
+                    <li class="nav"><a class="nav" href="/part6/hw6.html">HW6</a></li>
+                    <li class="nav"><a class="nav" href="contact.html">Contact</a></li>
                 </ul>
             </div>
         </div>
