--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
         <title>Contact</title>
 
         <style>
-            @import url(/~anevers/css/styles.css);
+            @import url(/css/styles.css);
             @import url(https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,300italic);
         </style>
 
