--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </title>
 
         <style>
-            @import url(http://weblab.cs.uml.edu/~anevers/css/styles.css);
+            @import url(css/styles.css);
             @import url(https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,300italic);
         </style>
 
@@ -35,9 +35,9 @@
                 </div>
                 <ul class="nav">
                     <li class="nav"><a class="nav" href="index.html">Index</a></li>
-                    <li class="nav"><a class="nav" href="/part4/hw4.html">HW4</a></li>
-                    <li class="nav"><a class="nav" href="/part5/hw5.html">HW5</a></li>
-                    <li class="nav"><a class="nav" href="/part6/hw6.html">HW6</a></li>
+                    <li class="nav"><a class="nav" href="part4/hw4.html">HW4</a></li>
+                    <li class="nav"><a class="nav" href="part5/hw5.html">HW5</a></li>
+                    <li class="nav"><a class="nav" href="part6/hw6.html">HW6</a></li>
                     <li class="nav"><a class="nav" href="contact.html">Contact</a></li>
                 </ul>
             </div>
