--- a/contact.html
+++ b/contact.html
@@ -47,7 +47,8 @@
                     <h1> Contact Information:</h1>
                     
                     <p>If you would like to contact me professionally, please find me via my <a href="https://www.linkedin.com/in/alexandranevers">Linked-In</a> page.</p>
-                    
+                    <p> Some of my previous coding work can be found on <a href="https://github.com/crabclawisland">GitHub</a>.
+
                     <p> Email Contact can be found here: </p>
                     <ul>
                         <li><a href="mailto:alexandra_nevers@student.uml.edu">Alexandra_Nevers@student.uml.edu</a></li>
