--- a/part6/hw6.html
+++ b/part6/hw6.html
@@ -32,10 +32,10 @@
                 var p3 = document.getElementById("n3").value;
                 var p4 = document.getElementById("n4").value;
 
-                if (p1 === null || p1 === "" || p1 < "1",
-                        p2 === null || p2 === "" || p2 < 1,
-                        p3 === null || p3 === "" || p3 < 1,
-                        p4 === null || p4 === "" || p4 < 1) {
+                if (p1 === null || p1 === "",
+                        p2 === null || p2 === "",
+                        p3 === null || p3 === "",
+                        p4 === null || p4 === "") {
 
                     alert("Please enter a number between 1 and 999 for all fields.");
 
