--- a/part6/hw6.html
+++ b/part6/hw6.html
@@ -26,20 +26,25 @@
 
 <script>
             function Multiply() {
+  /* convert all fields to ints */
 
-                var p1 = document.getElementById("n1").value;
-                var p2 = document.getElementById("n2").value;
-                var p3 = document.getElementById("n3").value;
-                var p4 = document.getElementById("n4").value;
+                var p1 = parseInt(document.getElementById("n1").value);
+                var p2 = parseInt(document.getElementById("n2").value);
+                var p3 = parseInt(document.getElementById("n3").value);
+                var p4 = parseInt(document.getElementById("n4").value);
 
-                if (p1 === null || p1 === "",
-                        p2 === null || p2 === "",
-                        p3 === null || p3 === "",
-                        p4 === null || p4 === "") {
+                /* test if inputs are 0, negative, bigger than 999, or NaN (blank) */
+
+                if (p1 !== p1 || p1 < 1 || p1 > 999 ||
+                        p2 !== p2 || p2 < 1 || p2 > 999 ||
+                        p3 !== p3 || p3 < 1 || p3 > 999 ||
+                        p4 !== p4 || p4 < 1 || p4 > 999) {
 
                     alert("Please enter a number between 1 and 999 for all fields.");
+                    /* alert to reenter numbers, or continue to mult table */
 
                 } else {
+                    /*reprint the table with headings and multiplications */
                     document.getElementById("multtable").innerHTML =
                             "<table><tr><th>&nbsp;</th>" +
                             "<th>" + p1 +
