--- a/part5/hw5.html
+++ b/part5/hw5.html
@@ -88,6 +88,7 @@
                     <li class="nav"><a class="nav" href="../index.html">Index</a></li>
                     <li class="nav"><a class="nav" href="hw5.html">HW5</a></li>
                     <li class="nav"><a class="nav" href="../part6/hw6.html">HW6</a></li>
+                    <li class="nav"><a class="nav" href="../part7/hw4.html">HW7</a></li>
                     <li class="nav"><a class="nav" href="../contact.html">Contact</a></li>
                 </ul>
             </div>
