--- a/part6/hw6.html
+++ b/part6/hw6.html
@@ -96,6 +96,7 @@
                     <li class="nav"><a class="nav" href="../index.html">Index</a></li>
                     <li class="nav"><a class="nav" href="../part5/hw5.html">HW5</a></li>
                     <li class="nav"><a class="nav" href="hw6.html">HW6</a></li>
+                    <li class="nav"><a class="nav" href="../part7/hw4.html">HW6</a></li>
                     <li class="nav"><a class="nav" href="../contact.html">Contact</a></li>
                 </ul>
             </div>
