--- a/contact.html
+++ b/contact.html
@@ -9,11 +9,8 @@
                     alexandra_nevers@student.uml.edu
                     Undergrad @ UML in GUI I 
                     Created On 9/18/2015
-<<<<<<< HEAD
+
                     Last edited on: 10/16/2015
-=======
-                    Last edited on: 10/2/2015
->>>>>>> origin/master
                     Contact Info Page
                 
         -->
@@ -21,7 +18,7 @@
         <title> A.Nevers Contact</title>
 
         <style>
-            @import url(/~anevers/css/styles.css);
+            @import url(/css/styles.css);
             @import url(https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,300italic);
         </style>
 
