--- a/part7/hw4.html
+++ b/part7/hw4.html
@@ -16,7 +16,7 @@
             A.Nevers HW7
         </title>
         
-        <link rel="stylesheet" type="text/css" href="/~anevers/css/styles.css" media="screen" />
+        <link rel="stylesheet" type="text/css" href="../css/styles.css" media="screen" />
         <style>
             @import url(https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,300italic);
         </style>
