--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
         <title> A.Nevers Contact</title>
 
         <style>
-            @import url(/css/styles.css);
+            @import url(css/styles.css);
             @import url(https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,300italic);
         </style>
 
