--- a/part7/hw4.html
+++ b/part7/hw4.html
@@ -1,3 +1,5 @@
+<!DOCTYPE html>
+
 <html>
     <head>
         <meta charset="UTF-8">
@@ -55,7 +57,7 @@
 
                     <!-- Form for getting user entered numbers -->
 
-                    <form id="form" action="" method="GET">
+                    <form id="form" method="GET">
                         <p>Number 1:
                             <input type="number" name="n1" id="n1" min="1" max="999" value="1">
 
