--- a/part7/hw4.html
+++ b/part7/hw4.html
@@ -36,7 +36,7 @@
         <div class="sideBar boxLeft">
             <div>
                 <div style="vertical-align:top;text-align:center;">
-                    <img src="http://weblab.cs.uml.edu/~anevers/imgs/pumpkin.jpg"/>
+                    <img src="http://weblab.cs.uml.edu/~anevers/imgs/pumpkin.jpg" alt="Pumpkin"/>
                 </div>
 
                 <ul class="nav">
