--- a/part4/hw4.html
+++ b/part4/hw4.html
@@ -30,13 +30,15 @@
         <div class="sideBar boxLeft">
             <div>
                 <div style="vertical-align:top;text-align:center;">
-                    <img src="http://weblab.cs.uml.edu/~anevers/imgs/me_and_sam.jpg" alt="Sampson, a very sweet puppy, licks my face."/>
+                  
                 </div>
                 <ul class="nav">
                     <li class="nav"><a class="nav" href="../index.html">Index</a></li>
                     <li class="nav"><a class="nav" href="hw4.html">HW4</a></li>
                     <li class="nav"><a class="nav" href="../part5/hw5.html">HW5</a></li>
                     <li class="nav"><a class="nav" href="../part6/hw6.html">HW6</a></li>
+                    <li class="nav"><a class="nav" href="../part7/hw4.html">HW7</a></li>
+                    <li class="nav"><a class="nav" href="../part8/hw8.html">HW8</a></li>
                     <li class="nav"><a class="nav" href="../contact.html">Contact</a></li>
                 </ul>
             </div>
