--- a/part7/hw4.html
+++ b/part7/hw4.html
@@ -36,7 +36,7 @@
         <div class="sideBar boxLeft">
             <div>
                 <div style="vertical-align:top;text-align:center;">
-                    <img src="http://weblab.cs.uml.edu/~anevers/imgs/pumpkin.jpg" alt="Pumpkin"/>
+                    
                 </div>
 
                 <ul class="nav">
@@ -44,6 +44,7 @@
                     <li class="nav"><a class="nav" href="../part5/hw5.html">HW5</a></li>
                     <li class="nav"><a class="nav" href="../part6/hw6.html">HW6</a></li>
                     <li class="nav"><a class="nav" href="hw4.html">HW7</a></li>
+                     <li class="nav"><a class="nav" href="../part8/hw8.html">HW8</a></li>
                     <li class="nav"><a class="nav" href="../contact.html">Contact</a></li>
                 </ul>
             </div>
