--- a/part8/hw8.html
+++ b/part8/hw8.html
@@ -19,8 +19,8 @@
         </title>
 
         <link href='http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/themes/base/jquery-ui.css' rel='stylesheet' type='text/css'>
-        <link rel="stylesheet" type="text/css" href="/~anevers/css/styles.css" media="screen" />
-        <link rel="stylesheet" type="text/css" href="/~anevers/css/slider.css" media="screen" />
+        <link rel="stylesheet" type="text/css" href="../css/styles.css" media="screen" />
+        <link rel="stylesheet" type="text/css" href="../css/slider.css" media="screen" />
 
         <style>            
             @import url(https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,300italic);
@@ -46,12 +46,12 @@
                 </div>
 
                 <ul class="nav">
-                    <li class="nav"><a class="nav" href="/~anevers/index.html">Index</a></li>
-                    <li class="nav"><a class="nav" href="/~anevers/part5/hw5.html">HW5</a></li>
-                    <li class="nav"><a class="nav" href="/~anevers/part6/hw6.html">HW6</a></li>
-                    <li class="nav"><a class="nav" href="/~anevers/part7/hw4.html">HW7</a></li>
-                    <li class="nav"><a class="nav" href="/~anevers/part8/hw8.html">HW8</a></li>
-                    <li class="nav"><a class="nav" href="/~anevers/contact.html">Contact</a></li>
+                    <li class="nav"><a class="nav" href="../index.html">Index</a></li>
+                    <li class="nav"><a class="nav" href="../part5/hw5.html">HW5</a></li>
+                    <li class="nav"><a class="nav" href="../part6/hw6.html">HW6</a></li>
+                    <li class="nav"><a class="nav" href="../part7/hw4.html">HW7</a></li>
+                     <li class="nav"><a class="nav" href="hw8.html">HW8</a></li>
+                    <li class="nav"><a class="nav" href="../contact.html">Contact</a></li>
                 </ul>
             </div>
         </div>
