--- a/index.html
+++ b/index.html
@@ -34,9 +34,7 @@
 
         <div class="sideBar boxLeft">
             <div>
-                <div style="vertical-align:top;text-align:center;">
-                    
-                </div>
+               
                 <ul class="nav">
 
                     <li class="nav"><a class="nav" href="index.html">Index</a></li>
@@ -44,6 +42,7 @@
                     <li class="nav"><a class="nav" href="part6/hw6.html">HW6</a></li>
                     <li class="nav"><a class="nav" href="part7/hw4.html">HW7</a></li>
                     <li class="nav"><a class="nav" href="part8/hw8.html">HW8</a></li>
+                    <li class="nav"><a class="nav" href="part9/hw9.html">HW9</a></li>
                     <li class="nav"><a class="nav" href="contact.html">Contact</a></li>
 
                 </ul>
