--- a/part8/hw8.html
+++ b/part8/hw8.html
@@ -42,15 +42,14 @@
 
         <div class="sideBar boxLeft">
             <div>
-                <div style="vertical-align:top;text-align:center;">
-                </div>
-
+            
                 <ul class="nav">
                     <li class="nav"><a class="nav" href="../index.html">Index</a></li>
                     <li class="nav"><a class="nav" href="../part5/hw5.html">HW5</a></li>
                     <li class="nav"><a class="nav" href="../part6/hw6.html">HW6</a></li>
                     <li class="nav"><a class="nav" href="../part7/hw4.html">HW7</a></li>
                      <li class="nav"><a class="nav" href="hw8.html">HW8</a></li>
+                     <li class="nav"><a class="nav" href="../part9/hw9.html">HW9</a></li>
                     <li class="nav"><a class="nav" href="../contact.html">Contact</a></li>
                 </ul>
             </div>
